@@ -91,6 +91,7 @@ pref("gamefox.context.tag.myposts", true);
 pref("gamefox.context.tag.tracked", true);
 pref("gamefox.context.usergroups", true);
 pref("gamefox.context.filter", true);
+pref("gamefox.context.delete", true);
 pref("gamefox.options.page.selectedtab", 0);
 pref("gamefox.options.sig.selectedtab", 0);
 pref("gamefox.version", "");
