@@ -1,2 +1,6 @@
 filter=Filter By User
 unfilter=Show All Posts
+
+deleteTopic=Delete Topic
+deletePost=Delete Message
+closeTopic=Close Topic
